# band-hero

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: Bass.hpp.BB416ABBDF453129.idx  Device.cpp.38082589CFD82D17.idx  Device.hpp.352BCCAA14B9C842.idx  Drums.hpp.12AA5C3A56210F02.idx  Game.cpp.5FFB2C85AFDE8042.idx  Game.hpp.828F6DADC909CFC6.idx  GameState.cpp.062C8B65DE0D8BC1.idx  GameState.hpp.8AA15B48DD397CB7.idx  Guitar.hpp.DCF85CBDDAB3DC21.idx  Instrument.hpp.56C154BB0F222D6C.idx  MainMenuState.cpp.A937F3B1E59D8C3F.idx  MainMenuState.hpp.8337E493978E87E6.idx  PauseMenuState.hpp.F687465EBC622E28.idx  PuseMenuState.cpp.D344039B74CE3ED8.idx  State.cpp.D349FDEDD201441E.idx  State.hpp.F3DA541F9607FC09.idx  StateStack.cpp.B4587C4E95EACCB0.idx  StateStack.hpp.D566EC9BCD21700C.idx  main.cpp.C190A4AD448E6F23.idx  serialib.cpp.7BEBEC71085954E7.idx  serialib.h.59AB0137B458AB79.idx
Assets/: Headlight.cs  Headlight.inputactions  UniversalRenderPipelineGlobalSettings.asset  burger.cs
Assets/Scenes/: SampleScene.unity
Assets/Settings/Build Profiles/: Windows.asset
ProjectSettings/: ProjectSettings.asset
include/core/: Game.hpp  StateStack.hpp
include/instruments/: Bass.hpp  Drums.hpp  Guitar.hpp  Instrument.hpp
include/settings/: Device.hpp
include/states/: ConnectionState.hpp  EasyGameState.hpp  GameState.hpp  HardGameState.hpp  MainMenuState.hpp  PauseMenuState.hpp  SettingsMenuState.hpp  SongSelectionState.hpp  State.hpp
include/ui/: Button.hpp
src/: main.cpp
src/core/: Game.cpp  StateStack.cpp
src/instruments/: Instrument.cpp
src/serial/: serialib.cpp
src/settings/: Device.cpp
src/states/: ConnectionState.cpp  EasyGameState.cpp  GameState.cpp  HardGameState.cpp  MainMenuState.cpp  PuseMenuState.cpp  SettingsMenuState.cpp  SongSelectionState.cpp  State.cpp
src/ui/: Button.cpp
